# ThesisLoom

./: README.md  RELEASE_NOTES.md  ThesisLoom.spec  ThesisLoomBackend.spec  ThesisLoom_slim.spec  api.py  backend_api.py  desktop_backend.py  main.py  package-lock.json  requirements.legacy.txt  requirements.txt  state_dashboard.py  streamlit_app.py  workflow.py
.kilo/plans/: 1775701963408-jolly-falcon.md
core/: llm.py  nodes.py  nodes.py.bak_review_arch_20260327  project_paths.py  prompts.py  prompts.py.bak_review_arch_20260327  state.py  state.py.bak_move_workflow_helpers_20260327  state.py.bak_pre_research_resume_flags_20260327
desktop_ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop_ui/src/: App.tsx  api.ts  styles.css  types.ts
desktop_ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop_ui/src-tauri/capabilities/: default.json
desktop_ui/src-tauri/src/: main.rs
docs/: README.md  build_and_package.md  dashboard_app.html  ui_page_guide.md  workflow_stage_architecture.md
history/legacy_frontend/: streamlit_app_legacy.py
inputs/: existing_material.md  existing_sections.md  inputs.json  journal_style.md  related_works.md  research_gaps.md  user_requirements.md
inputs/guidance/: conclusion_guidance.md  overall_guidance.md  results_guidance.md
inputs/review/: overall_review.md
outputs/: research_gaps.md
projects/: .active_project.json
scripts/: build_backend_exe.ps1  build_desktop_bundle.ps1  build_exe.ps1  build_setup.ps1
tests/: test_search_nodes.py
(+15 files in other folders)
