[package]
name = "thesisloom_desktop"
version = "0.1.0"
description = "ThesisLoom Desktop UI"
authors = ["ThesisLoom"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.6", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
